@@ -1,3 +1,8 @@
+2010-07-05  Piotr Fusik  <fox@scene.pl>
+* csharp/SilverASAP.cs, csharp/AppManifest.xaml, csharp/ASAP.ppcs,
+  csharp/Makefile, anylang.h, README, PORTS.xml: Silverlight player
+
+
 2010-07-03  Piotr Fusik  <fox@scene.pl>
 * flash/Makefile, flash/ASAP.ppas, flash/ASAP_ModuleInfo.as:
   documentation comments
